[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13.0, <3.14"
dependencies = [
    "aiocache>=0.12.3",
    "asyncwhois>=1.1.12",
    "email-validator>=2.3.0",
    "holehe",
    "niquests>=3.15.2",
    "orjson>=3.11.0",
    "patch-package-py",
    "robyn>=0.72.2",
    "robyn-rate-limits>=0.4.0",
    "tldextract>=5.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[tool.uv.sources]
holehe = { git = "https://github.com/megadose/holehe" }
patch-package-py = { git = "https://github.com/nomyfan/patch-package-py" }
